# Automation-Auditor

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
audit/: report_onpeer_generated.md  report_onself_generated.md
reports/: final_verdict.json  interim_report.md
rubrics/: rubric.json
src/: __init__.py  graph.py  main.py  state.py
src/nodes/: detectives.py  judges.py  justice.py
src/tools/: __init__.py  doc_tools.py  repo_tools.py  vision_tools.py
tests/: __init__.py  test_doc_tools.py  test_dummy.py  test_repo_tools.py
