# pyproject.toml

[project]
name = "automation-auditor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.0.20",
    "pydantic>=2.6.0",
    "typing-extensions>=4.9.0",
    "gitpython>=3.1.41",
    "tree-sitter>=0.20.1",
    "docling>=0.2.0",
    "python-dotenv>=1.0.0",
    "langsmith>=0.1.0",
    "pytest>=8.0.0",
    "requests>=2.32.5",
    "uv>=0.10.6",
    "pypdf2>=3.0.1",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.1",
    "black>=26.1.0",
    "isort>=8.0.0",
    "flake8>=7.3.0",
    "docker>=7.1.0",
    "huggingface-hub[hf-xet]>=0.36.2",
]

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
skip = [".venv"]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]
